# django-boilerplate

./: README.md  pyproject.toml  styles.css
base_templates/global/: base.html  base_cadastro.html
src/core/: views.py
src/core/templates/core/pages/: home.html
src/cores/: admin.py  apps.py  urls.py  views.py
src/cores/templates/cores/pages/: cadastro.html  home.html
src/cores/templates/cores/partials/: head.html
src/project/: settings.py  urls.py
